@@ -1,8 +1,14 @@
-2022-09-23  Charlie Zender  <zender@uci.edu>
+2022-09-25  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.1-alpha08 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha08: Backflow';git push
 	git tag -a 5.1.1-alpha08 -m 'all: NSB->NESB';git push --tags
+
+	* ncremap replace ConvertSCRIPToExodus (no longer exists) by ConvertMeshoExodus
+
+	* ncks chk_map add INFO not scary WARNING when weights are intentionally non-conservative
+
+2022-09-23  Charlie Zender  <zender@uci.edu>
 
 	* ncrename stdin search for input filenames works, though cannot copy from NCZarr to POSIX
 
